--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,17 +19,21 @@
     "@types/express-session": "^1.18.2",
     "@types/pg": "^8.16.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.2",
     "nodemon": "^3.1.11",
     "prisma": "^7.1.0",
