--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,7 +7,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "sourceMap": true
+    "sourceMap": true,
   },
-  "include": ["src"]
+  "include": ["src"],
+  "files": ["src/types/express-session.d.ts", "src/types/multer-cloudinary.d.ts"]
 }
